<androidx.cardview.widget.CardView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:id="@+id/item_event_card"
    android:layout_margin="8dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_tile"
            android:fontFamily="@font/nunito_sans_bold"
            android:textSize="16sp"
            android:text="@string/to_read_a_book"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_message"
            android:text="@string/tv_message"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="@id/tv_tile"
            app:layout_constraintBottom_toBottomOf="@id/tv_message"
            app:layout_constraintRight_toRightOf="parent"
            >
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:text="@string/_28_05_2022"
                android:layout_height="match_parent"/>
            <View
                android:id="@+id/view_line"
                android:layout_width="1dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:background="@color/black"
                />
            <TextView
                android:id="@+id/tv_time"
                android:text="@string/_23_45pm"
                android:layout_marginHorizontal="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>