<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@color/white_2"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/tv_title_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:gravity="center_vertical"
        android:text="@string/msg_notes_title"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
 />
    <EditText
        android:id="@+id/edit_text_search"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="11dp"
        android:autofillHints="name"
        android:background="@drawable/custom_default_shape"
        android:fontFamily="@font/nunito_sans_regular"
        android:hint="@string/msg_search"
        android:inputType="text"
        android:paddingHorizontal="22dp"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_notes" />

    <TextView
        android:id="@+id/tv_recent_searches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_recent_searches"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_search"
        android:layout_marginStart="22dp"
        android:textSize="23sp"
        android:fontFamily="@font/nunito_sans_regular"
        android:layout_marginTop="28.56dp"
        />

    <TextView
        android:id="@+id/tv_search_not_found"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="22dp"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="start|center"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_recent_searches"
        android:text="@string/msg_search_not_found"
        android:background="@drawable/custom_default_shape"
        />


</androidx.constraintlayout.widget.ConstraintLayout>