<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linear_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="23dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ic_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_back"
            style="@style/BlueTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/msg_back"
            app:layout_constraintLeft_toRightOf="@id/ic_btn_back"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>


    <ImageView
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:fontFamily="@font/nunito_sans_regular"
        android:gravity="center_vertical|center_horizontal"
        android:src="@drawable/ic_done"
        android:text="@string/msg_save"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/linear_back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/linear_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="22dp"
        android:scrollbars="none"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_page_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/nunito_sans_bold"
                android:hint="@string/msg_page_title"
                android:inputType="textMultiLine"
                android:textSize="26sp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_modified_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/title_date"
                    android:textColor="@color/gray_2"
                    android:textSize="11sp" />
                <View
                    android:layout_width="1dp"
                    android:background="@color/gray_2"
                    android:layout_marginHorizontal="8dp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:id="@+id/tv_symbols"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/symbols"
                    android:textColor="@color/gray_2"
                    android:textSize="11sp"
                    />
            </LinearLayout>




            <EditText
                android:id="@+id/edit_text_note_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:fontFamily="@font/nunito_sans_regular"
                android:hint="@string/msg_type"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>


