<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_2"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_title_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/nunito_sans_regular"
        android:text="@string/title_date"
        android:textColor="@color/gray"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:gravity="center_vertical"
        android:text="@string/msg_notes_title"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_date" />

    <EditText
        android:id="@+id/edit_text_search"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:inputType="text"
        android:autofillHints="name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_notes"
        android:background="@drawable/edit_text_background"
        android:layout_marginHorizontal="22dp"
        android:hint="@string/msg_search"
        android:fontFamily="@font/nunito_sans_regular"
        android:textSize="18sp"
        android:paddingHorizontal="22dp"
        android:layout_marginTop="11dp"
        />





</androidx.constraintlayout.widget.ConstraintLayout>